--- a/.env
+++ b/.env
@@ -7,11 +7,15 @@ EXPRESS_HOST_PORT=8080
 
 POSTGRES_HOST_PORT=5432
 POSTGRES_CONTAINER_PORT=5432
+POSTGRES_HOSTNAME_LOCAL = localhost
 POSTGRES_HOSTNAME=postgres-primary-db
 POSTGRES_USER=euniceem1007
 POSTGRES_PASSWORD=password
 POSTGRES_DB=react-kanban
 
 REDIS_HOST_PORT=6379
+REDIS_URL = //redis-server
 REDIS_CONTAINER_PORT=6379
+
+
 
