--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express-session": "^1.15.6",
     "knex": "^0.13.0",
     "method-override": "^3.0.0",
+    "node-sass": "^4.11.0",
     "nodemon": "^1.18.10",
     "parser": "^0.1.4",
     "pg": "^7.8.0",
